# cfml_tutorial

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
action_embed/: abstraction.py  dataset.py  estimator.py  estimator_tuning.py  extreme.ipynb  importance_weight.py  lower_bound.py  main.ipynb  mips.ipynb  offcem.ipynb  opl.ipynb  opl_hpo.ipynb  opl_plot.py  opl_regularization.ipynb  policy.py  policylearners.py  realworld.ipynb  util.py  zozotown.ipynb
action_embed/dataset/: real.py  synthetic.py
action_embed/ope/: abstraction.py  estimator.py  estimator_tuning.py  importance_weight.py  meta.py  regression.py
action_embed/policy/: dataset.py  function.py  nn_model.py  policylearners.py
action_embed/utils/: common.py  lower_bound.py
bandit/: Untitled.ipynb  __init__.py  bandit.ipynb  basic_ope_using_obp.ipynb  binary_reward.ipynb  continous_reward.ipynb  intaractive_mf.ipynb  ope.ipynb  ope_control.ipynb  ope_dm.ipynb  ope_dr.ipynb  ope_ips.ipynb  ope_rm.ipynb  ope_varying_estimator.ipynb
bandit/ope_estimator/: __init__.py  action_dist.py  estimator.py  q_hat.py
bandit/policy/: __init__.py  bandit.py  contextual_bandit.py  intaractive_mf.py
bandit/simulator/: __init__.py  bandit_simulator.py  server.py
basic/: basic_ope_using_obp.ipynb  inductive_bias.ipynb  utils.py
on_policy/: web_server.py
ranking/: adaptive.ipynb  aips.ipynb  behavior_model.ipynb  cascade.ipynb  dataset.py  estimator.py  iips.ipynb  independent.ipynb  main.ipynb  policy.py  rips.ipynb  util.py  weight.ipynb
sequential/: ope.ipynb
(+27 files in other folders)
