[tool.poetry]
name = "CFML tutorial"
version = "0.1.0"
description = ""
authors = ["tatsuki takahashi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
obp = "^0.5.5"
numpy = "^1.22.5"
scikit-learn = "1.1.3"
scipy = "1.9.3"
pandas = "^1.3.2"
seaborn = "^0.11.2"
matplotlib = "^3.7.3"
hydra-core = "^1.3.2"
torch = "^1.12.0"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
jupyterlab = "^3.1.16"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 88
